--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-aiodns==1.1.1
-aiohttp==2.3.9
+aiodns==3.0.0 #==1.1.1
+aiohttp==3.8.1 #==2.3.9
 async-timeout==2.0.0
 Babel==2.5.3
-cchardet==2.1.1
-ccxt==1.10.815
+cchardet #==2.1.1
+ccxt #==1.10.815
 certifi==2018.1.18
-chardet==3.0.4
+chardet # ==3.0.4
 click==6.7
 cycler==0.10.0
 dash==0.20.0
 dash-core-components==0.18.0
 dash-html-components==0.8.0
 dash-renderer==0.11.2
+python-dateutil
 decorator==4.2.1
 Flask==0.12.2
 Flask-Babel==0.11.2
@@ -24,22 +25,22 @@ itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
 jupyter-core==4.4.0
-MarkupSafe==1.0
-matplotlib==2.1.2
+MarkupSafe #==1.0
+matplotlib #==2.1.2
 multidict==4.0.0
 nbformat==4.4.0
-numpy==1.14.0
-pandas==0.22.0
+numpy #==1.14.0
+pandas #==0.22.0
 plotly==2.2.3
-pycares==2.3.0
-pyparsing==2.2.0
+pycares #==2.3.0
+pyparsing==2.2.1
 pypubsub==4.0.0
 python-dateutil==2.6.1
 pyti==0.2.1
 pytz==2017.3
 requests==2.18.4
 six==1.11.0
-SQLAlchemy==1.2.1
+SQLAlchemy==1.3.6
 traitlets==4.3.2
 urllib3==1.22
 Werkzeug==0.14.1
