--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 python-dateutil
 matplotlib #==2.1.2
-numpy #==1.14.0
-pandas #==0.22.0
+numpy~=1.20.3
+pandas~=1.3.5
 plotly==2.2.3
 python_bitvavo_api
+
+requests~=2.22.0
+pytz~=2019.3
+telegram~=0.0.1
+PyYAML~=5.3.1
+dateparser~=1.0.0
